# cc-skill-picker

./: .gitignore  CLAUDE.md  LICENSE  README.md  cc-skills  pyproject.toml
src/cc_skills/: __init__.py  cli.py  clipboard.py  core.py  tui.py
src/cc_skills/resources/: display_overrides.json  scan_defaults.json
tests/: test_core.py
